--- a/layout-shifter/index.html
+++ b/layout-shifter/index.html
@@ -17,28 +17,28 @@
     <header class="header">
         <nav>
             <ul class="container-head__menu">
-                <li class="nav-item"><a href="">INICIO</a></li>
-                <li class="nav-item"><a href="">PROYECTOS</a></li>
-                <li class="nav-item"><a href="">REDES</a></li>
+                <li class="nav-item"><a href="#aboutme">ME</a></li>
+                <li class="nav-item"><a href="#interests">INTERESTS</a></li>
+                <li class="nav-item"><a href="#networks">NETWORKS</a></li>
             </ul>
         </nav>
     </header>
 
-    
+
     <main class="container-main">
-        <picture class="container-main__foto">
+        <picture class="container-main__foto" id="arriba">
             <div><img src="./images/foto.jpg" alt="imagen" class="foto"></div>
         </picture>
         <div class="container-head__logo">
-            Hola a todos! <br>Soy Sebastian Rodelo
+           ("hello world")<br>I'm Sebastian Rodelo
         </div>
-        <div class="icono"><i class="fas fa-user-astronaut"></i></div>
+        <div class="icono"><i class="fas fa-user-astronaut" id="aboutme"></i></div>
         <section class="aboutme">      
             <p class="titulo1">About me</p>
-            <p>Tengo 22 años y aunque estudié contaduría lo que realmente me apasiona es la teconología. Estoy  aprendiendo desarrollo web y espero en algún momento trabajar en esta área.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus optio architecto rerum quas ullam itaque maiores labore porro error officia perspiciatis veniam laborum, libero commodi non voluptatem sit odio esse. Tengo 22 años y aunque estudié contaduría lo que realmente me apasiona es la teconología. Estoy  aprendiendo desarrollo web y espero en algún momento trabajar en esta área. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus optio architecto rerum quas ullam itaque maiores labore porro error officia perspiciatis veniam laborum, libero commodi non voluptatem sit odio esse.</p>
         </section>
-        <div class="icono"><i class="fas fa-user-astronaut"></i></div>
-        <section class="interests">
+        <div class="icono"><i class="fas fa-user-astronaut" id="interests"></i></div>
+        <section class="interests" >
             <p class="titulo1">Interested in</p>
             <picture class="container-main__foto">
                 <div><img src="./images/html.svg" alt="imagen" class="logo"></div>
@@ -74,11 +74,15 @@
                 <img src="./images/linux.svg" alt="imagen" class="logo">
             </picture>
         </section>
-            <div class="icono"><i class="fas fa-user-astronaut"></i></div>
-        <section class="aboutme">      
-            <p class="titulo1">About me</p>
-            <p>Tengo 22 años y aunque estudié contaduría lo que realmente me apasiona es la teconología. Estoy  aprendiendo desarrollo web y espero en algún momento trabajar en esta área.</p>
+        <section class="network" id="networks">      
+            <div class="titulo1"><p>Social networks</p></div>
+            <div class="icono"><a href="https://www.instagram.com/sebastianrodelo98/"><i class="fab fa-instagram"></i></a></div>
+            <div class="icono"><a href="https://www.facebook.com/sebastianrodelo1998/"><i class="fab fa-facebook-square"></i></a></div>
+            <div class="icono"><a href="https://twitter.com/SebastianRodelo"><i class="fab fa-twitter-square"></i></a></div>
         </section>
+        <div class="botonarriba">
+            <a href="#arriba"><i class="fas fa-arrow-up"></i></a>
+        </div>
     </main>
     <footer class="container-footer">
 
